--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>key value lookup service</title>
+    <title>Docker App - Phyton</title>
   </head>
   <body>
     <form method="POST">
